# DIPLOMAAAAAAAAAAAAAA

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
api_gateway/: Dockerfile  app.py  pyproject.toml
api_gateway/src/: app.py  schemas.py
course_service/: main.py  models.py  pyproject.toml  routes.py
course_service/src/: main.py  models.py  routes.py  schemas.py
front/: Dockerfile  package-lock.json  package.json  vite.config.js
front/src/: App.jsx  api.js  index.css
front/src/components/: AuthPage.jsx  CourseCreate.jsx  CoursePage.jsx  Courses.jsx  Login.jsx  QuizCreate.jsx  QuizPage.jsx  Quizzes.jsx  Tabs.jsx  Users.jsx  UsersAnswersPage.jsx
front/src/context/: AuthContext.jsx
quiz_service/: main.py  models.py  pyproject.toml  routes.py
quiz_service/src/: database.py  main.py  models.py  routes.py  schemas.py  utils.py
quiz_service/src/clients/: users.py
s3_service/: pyproject.toml
s3_service/src/: main.py  routes.py  utils.py
s3_service/src/clients/: s3.py
tests/: test_integration.py
user_service/: Dockerfile  main.py  models.py  pyproject.toml  routes.py  utils.py
user_service/src/: deps.py  main.py  models.py  routes.py  utils.py
